# playground_app_complete

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: beamer_locations.dart  bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  coin_utils.dart  extensions.dart  ffi.dart  main.dart
lib/data/: app_provider.dart  constants.dart  example_provider.dart  store_preference.dart
lib/examples/: example.dart  example_0.dart  example_1.dart  example_2.dart  example_3.dart  example_4.dart  example_5.dart  example_6.dart
lib/models/: coin_type_enum.dart  example_model.dart  example_step.dart  network.dart  network_type_enum.dart
lib/theme/: custom_colors.dart  custom_overlay.dart  custom_theme.dart
lib/widgets/: example_avatar.dart  example_detail.dart  example_list.dart  example_stepper_framework.dart  my_drawer.dart  my_end_drawer.dart  my_stateful_text_field.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/rust.xcodeproj/: project.pbxproj
rust/rust.xcodeproj/xcuserdata/kaimueller.xcuserdatad/xcschemes/: xcschememanagement.plist
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs
rust/src/api/: wallet_singleton.rs
web/: index.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc
(+2 files in other folders)
