[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
flutter_rust_bridge = "1"

iota-sdk = { version = "1.1.3", default-features = false, features = [
    "client",
    "wallet",
    "tls",
    "rocksdb",
    "stronghold",
] }

identity_iota = { version = "1.0.0", features = ["memstore"] }

tokio = { version = "1.34.0", features = ["full"] }
anyhow = { version = "1.0.75" }

serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false }

lazy_static = "1.4.0"
once_cell = "1.19.0"

[lib]
crate-type = ["staticlib", "cdylib"]
